# masters-src

./: .gitignore  :w  README.md  config.toml  config.yaml  notes.md  prepare.sh  start.py  start.sh  testy.md
backend/: go.mod
backend/internal/config/: config.go
backend/internal/device/: device.go  mac.go
backend/internal/templates/: globals.go  user-data.go  virt-device.go  virt-network.go
backend/internal/virt/: drive.go
good/: sw1-pc1.xml  sw1-pc2.xml
good/pc1/: config.xml
good/pc1/seed/: network-config  user-data
good/pc2/: config.xml
good/pc2/seed/: network-config  user-data
good/sw1/: config.xml
good/sw1/seed/: network-config  user-data
ied-ns/: .gitignore  README.md  config.yaml  device_manager.go  go.mod  main.go  main.py  types.go
ied-ns/cinit/: cinit.go
ied-ns/cinit/templates/: network-config.tmpl  user-data.tmpl
ied-ns/config/: cinit.py  device.py  devman.py  drive.py
ied-ns/config/templates/: switch.xml.jinja  user-data.jinja
ied-ns/config/vxml/: network.py
ied-ns/device/: device.go
ied-ns/devman/: devman.go
ied-ns/drive/: drive.go
ied-ns/makedev/: cinit.py  device.py  devman.py  drive.py  virtmac.py
ied-ns/virsh/: cloud-init.py  drive.py
ied-ns/virtmac/: virtmac.go
rtu/: CMakeLists.txt  client.c  main.c  server.c
rtu-client/: compile_commands.json  main.c
rtu-client/parser/: first.db  main.py  utils.py
rtu-client/scd/: CEZ_VNlinka_LAB.scd
rtu-server/: CMakeLists.txt  main.c
rtu-server/parser/: parse.py
rtu-src/: test.sql
rtu/client/: CMakeLists.txt  ied-client
rtu/conf/: CEZ_VNlinka_LAB.scd
rtu/server/: Dockerfile  ens3.pcap  ied-server.tar  server.c
scada-simu/: go.sum
simu/: config-test.yaml  config.yaml  go.mod  go.sum
simu/frontend/: index.html
simu/rtu/: ied-server  test.cfg
src-xml/: ip4.py  qcow2.py
vm-src/: ciso.py  main.py
vm-src/shell/: debian-install.sh
xml/: pc1.xml  pc2.xml  sw1-pc1.xml  sw1-pc2.xml  sw1.xml
(+41 files in other folders)
